--- a/src/gateway/cloudbuild.yaml
+++ b/src/gateway/cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
       - -c
       - |
         mvn -f src/gateway/shared-pom.xml -ntp process-resources apigee-enterprise:configure \
-          -Pdev -Dorg=$_APIGEE_PROJECT -Denv=$_APIGEE_TEST_ENV
+          -Ptest -Dorg=$_APIGEE_PROJECT -Denv=$_APIGEE_TEST_ENV
   - name: 'gcr.io/cloud-builders/mvn'
     id: "Deploy bundle"
     entrypoint: 'bash'
@@ -40,5 +40,5 @@ steps:
       - |
         # Read environment variables from disk
         source /workspace/build_vars &&
-        mvn -f src/gateway/shared-pom.xml -ntp apigee-enterprise:deploy -Pdev -Dorg=$_APIGEE_PROJECT \
+        mvn -f src/gateway/shared-pom.xml -ntp apigee-enterprise:deploy -Ptest -Dorg=$_APIGEE_PROJECT \
           -Denv=$_APIGEE_TEST_ENV -Dbearer=${build_token}
