--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,7 +30,7 @@ steps:
     args:
       - -c
       - |
-        mvn -f shared-pom.xml -ntp process-resources apigee-enterprise:configure \
+        mvn -f Mock-v1/shared-pom.xml -ntp process-resources apigee-enterprise:configure \
           -Ptest -Dorg=$_APIGEE_PROJECT -Denv=$_APIGEE_TEST_ENV
   - name: 'gcr.io/cloud-builders/mvn'
     id: "Deploy bundle"
@@ -40,5 +40,5 @@ steps:
       - |
         # Read environment variables from disk
         source /workspace/build_vars &&
-        mvn -f shared-pom.xml -ntp apigee-enterprise:deploy -Ptest -Dorg=$_APIGEE_PROJECT \
+        mvn -f Mock-v1/shared-pom.xml -ntp apigee-enterprise:deploy -Ptest -Dorg=$_APIGEE_PROJECT \
           -Denv=$_APIGEE_TEST_ENV -Dbearer=${build_token}
