--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,7 +30,7 @@ steps:
     args:
       - -c
       - |
-        mvn -f Mock-v1/pom.xml -ntp process-resources apigee-enterprise:configure \
+        mvn -f Mock-v1/pom.xml -ntp process-resources apigee-enterprise:configure -X \
           -Ptest -Dorg=$_APIGEE_PROJECT -Denv=$_APIGEE_TEST_ENV
 
   - name: 'gcr.io/cloud-builders/mvn'
